--- a/predictions.ipynb
+++ b/predictions.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,21 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "data='./db/titanic/train_clean.csv'\n",
     "train = pd.read_csv(data ,sep='\\t', encoding='utf-8')\n",
-    "X_train = train.drop(columns=['Unnamed: 0', 'survived'],axis=1)\n",
-    "y_train = train.survived\n",
+    "X_ = train.drop(columns=['Unnamed: 0', 'survived'],axis=1)\n",
+    "y = train.survived\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_, y,stratify=y, random_state=24)\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,24 +87,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Joaquin\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=10, penalty='l1', solver='saga')"
+       "LogisticRegression(C=100, class_weight='balanced', penalty='l1',\n",
+       "                   solver='liblinear')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,11 +110,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_prediction = model_clf.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved file: ./db/titanic/Titanic Predictions 1model_clf.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_to_get_id = pd.read_csv('./db/titanic/test_with_age.csv',encoding='utf-8')\n",
+    "data_to_get_id.passengerid\n",
+    "data_ = {'PassengerId':data_to_get_id.passengerid,'Survived':y_prediction}\n",
+    "out = pd.DataFrame(data_)\n",
+    "out\n",
+    "filename = './db/titanic/Titanic Predictions 1'+'model_clf'+'.csv'\n",
+    "out.to_csv(filename,index=False)\n",
+    "print('Saved file: ' + filename)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Traigo el modelo xgboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved file: ./db/titanic/Titanic Predictions 1model_xgb.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('./models/model_xgb.pkl', 'rb') as model_xgb:\n",
+    "        model_xgb = pickle.load(model_xgb)\n",
+    "model_xgb.fit(X_train,y_train)\n",
+    "\n",
+    "y_prediction = model_xgb.predict(X)\n",
+    "\n",
+    "data_ = {'PassengerId':data_to_get_id.passengerid,'Survived':y_prediction}\n",
+    "out = pd.DataFrame(data_)\n",
+    "out\n",
+    "filename = './db/titanic/Titanic Predictions 1'+'model_xgb'+'.csv'\n",
+    "out.to_csv(filename,index=False)\n",
+    "print('Saved file: ' + filename)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora el modelo ligtgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved file: ./db/titanic/Titanic Predictions 1model_lgb.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('./models/model_lgb.pkl', 'rb') as model_lgb:\n",
+    "        model_lgb = pickle.load(model_lgb)\n",
+    "model_lgb.fit(X_train,y_train)\n",
+    "\n",
+    "y_prediction = model_lgb.predict(X)\n",
+    "\n",
+    "data_ = {'PassengerId':data_to_get_id.passengerid,'Survived':y_prediction}\n",
+    "out = pd.DataFrame(data_)\n",
+    "out\n",
+    "filename = './db/titanic/Titanic Predictions 1'+'model_lgb'+'.csv'\n",
+    "out.to_csv(filename,index=False)\n",
+    "print('Saved file: ' + filename)\n"
    ]
   },
   {
@@ -132,20 +222,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "Can't get attribute 'ClassifierWrapper' on <module '__main__'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_18948\\3808825287.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'./models/model.pkl'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m         \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0my_prediction\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: Can't get attribute 'ClassifierWrapper' on <module '__main__'>"
+     ]
+    }
+   ],
    "source": [
-    "data_to_get_id = pd.read_csv('./db/titanic/test_with_age.csv',encoding='utf-8')\n",
-    "data_to_get_id.passengerid\n",
+    "with open('./models/model.pkl', 'rb') as model:\n",
+    "        model = pickle.load(model)\n",
+    "model.fit(X_train,y_train)\n",
+    "\n",
+    "y_prediction = model.predict(X)\n",
+    "\n",
     "data_ = {'PassengerId':data_to_get_id.passengerid,'Survived':y_prediction}\n",
     "out = pd.DataFrame(data_)\n",
     "out\n",
-    "filename = './db/titanic/Titanic Predictions 1.csv'\n",
+    "filename = './db/titanic/Titanic Predictions 1'+'model'+'.csv'\n",
     "out.to_csv(filename,index=False)\n",
-    "\n",
     "print('Saved file: ' + filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
